# fastapi-crud-operations

./: README.md  pyproject.toml
student/: main.py
