[tool.poetry]
name = "student"
version = "0.1.0"
description = ""
authors = ["QasimVibes <qasimrazzaq921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
dev= "student.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
